--- a/sass/index.scss
+++ b/sass/index.scss
@@ -10,7 +10,7 @@
 // @import "components/card";
 // @import "components/composition";
 // @import "components/feature-box";
-@import "components/form";
+@import "components/homeImg";
 // @import "components/story";
 
 @import "layout/footer";
