--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -263,7 +263,8 @@
       width: 100px;
       height: 100px;
       position: absolute;
-      left: 200px;
+      left: 60px;
+      top: 50%;
       border: 1px solid rgb(255, 0, 0);
 
       &:hover &__button {
