--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 }
 
 html {
+  font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
@@ -32,13 +33,8 @@ a {
 }
 
 .container {
+  position: relative;
   overflow: hidden;
-}
-
-.home-img {
-  width: 100%;
-  border-radius: 12px;
-  box-shadow: rgba(17, 17, 26, 0.4) 0px 8px 24px, rgba(17, 17, 26, 0.2) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 @keyframes fadeIn {
@@ -48,12 +44,12 @@ a {
 }
 @keyframes scroll-left {
   100% {
-    translate: calc(-100% - 100vw);
+    translate: -200%;
   }
 }
 @keyframes scroll-right {
   100% {
-    translate: calc(100% + 100vw);
+    translate: 200%;
   }
 }
 @keyframes moveInRight {
@@ -93,12 +89,12 @@ a {
 }
 @keyframes carouselImageActive {
   0% {
-    top: 40%;
+    top: 45%;
     right: 40px;
     transform: scale(1.5);
   }
   15% {
-    top: 40%;
+    top: 45%;
     right: 40px;
     transform: scale(1.5);
   }
@@ -143,7 +139,7 @@ a {
     transform: scale(1);
   }
   100% {
-    top: 40%;
+    top: 45%;
     right: 40px;
     transform: scale(1.5);
   }
@@ -161,12 +157,12 @@ a {
   }
   20% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   35% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   40% {
@@ -228,12 +224,12 @@ a {
   }
   40% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   55% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   60% {
@@ -295,12 +291,12 @@ a {
   }
   60% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   75% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   80% {
@@ -362,12 +358,12 @@ a {
   }
   80% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   95% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   100% {
@@ -517,28 +513,50 @@ a {
   0% {
     opacity: 0;
   }
-  13% {
-    transform: translate(0, -120px);
-  }
-  16% {
-    opacity: 0;
-  }
-  17% {
-    opacity: 1;
-  }
-  20% {
-    transform: translate(0, 0);
-  }
   35% {
-    transform: translate(0, 0);
-    opacity: 1;
+    transform: translate(0, -600px);
+    opacity: 0;
   }
   37% {
-    transform: translate(0, 60px);
-    opacity: 0;
+    transform: translate(0, -540px);
+    opacity: 1;
   }
   100% {
     opacity: 0;
+  }
+}
+@keyframes swipeTextThree {
+  0% {
+    opacity: 1;
+  }
+  33% {
+    transform: translate(0, -40px);
+  }
+  36% {
+    opacity: 1;
+  }
+  40% {
+    transform: translate(0, 0);
+  }
+  55% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+  57% {
+    opacity: 0;
+    transform: translate(0, 60px);
+  }
+  100% {
+    transform: translate(0, -120px);
+    opacity: 0;
+  }
+}
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-100% - 10px));
   }
 }
 body,
@@ -817,6 +835,7 @@ li {
   height: 50px;
   border-radius: 150px;
   border: none;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -824,6 +843,15 @@ li {
 .button__blue {
   padding: 12px 33px;
   background-color: #317ade;
+}
+.button__blue:hover {
+  background-color: #1e62be;
+}
+
+.home-img {
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: rgba(17, 17, 26, 0.4) 0px 8px 24px, rgba(17, 17, 26, 0.2) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 .footer {
@@ -943,6 +971,36 @@ li {
   height: inherit;
 }
 
+.progress {
+  height: 56px;
+  width: 56px;
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  display: none;
+  place-items: center;
+  border: 7px solid black;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  cursor: pointer;
+}
+.progress i {
+  font-size: 20px;
+  color: #fff;
+}
+
+.progress-value {
+  display: block;
+  height: calc(100% - 5px);
+  width: calc(100% - 5px);
+  background-color: black;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-size: 35px;
+}
+
 .hero {
   width: 100%;
   background-color: transparent;
@@ -1006,6 +1064,11 @@ li {
   background-color: #6dd400;
   animation: fly2 60s linear infinite both;
 }
+.hero__text-content {
+  width: 100%;
+  position: relative;
+  z-index: 2;
+}
 .hero__text-box {
   height: auto;
   padding: 250px 16px 0;
@@ -1014,23 +1077,30 @@ li {
   width: 100%;
   padding: 0 16px;
 }
-.hero__button-box__link {
+.hero__link {
   width: 100%;
+  height: 56px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.hero__button-box .button__header {
+.hero__link .button__header {
   width: 100%;
   height: 56px;
-  margin-bottom: 20px;
   padding: 16px 32px;
 }
-.hero__button-box .button__header--first {
+.hero__link .button__header--first {
   background-color: #fff;
 }
-.hero__button-box .button__header--second {
+.hero__link .button__header--first:hover {
+  background-color: #d9d9d9;
+}
+.hero__link .button__header--second {
   background-color: #393939;
+}
+.hero__link .button__header--second:hover {
+  background-color: #2c2c2c;
 }
 .hero__images {
   width: 100%;
@@ -1152,6 +1222,10 @@ li {
 .services .card-box {
   margin-top: 50px;
 }
+.services .card {
+  display: block;
+  width: 100%;
+}
 .services .card:not(:last-child) {
   margin-bottom: 40px;
 }
@@ -1209,9 +1283,6 @@ li {
 .testimonials__carousel {
   width: 100%;
 }
-.testimonials .carousel__item-box:not(:first-child) {
-  display: none;
-}
 .testimonials .carousel__list {
   position: relative;
   margin-bottom: 32px;
@@ -1222,10 +1293,6 @@ li {
 .testimonials .carousel__list img {
   width: 80px;
   height: 80px;
-}
-.testimonials .carousel__list .active {
-  width: 129.6px;
-  height: 129.6px;
 }
 .testimonials .carousel__heading-subtitle {
   margin-bottom: 32px;
@@ -1262,27 +1329,35 @@ li {
 .hire-us .button__blue {
   margin: 32px 0 50px 0;
 }
-.hire-us .trustedby {
+.hire-us .trustedby-dt {
+  display: none;
+}
+.hire-us .trustedby-mob {
   height: 216px;
   padding: 50px 0;
   background-color: #f9fafe;
   overflow: hidden;
 }
-.hire-us .trustedby__container {
+.hire-us .trustedby-mob__container {
   width: 100%;
 }
-.hire-us .trustedby__heading-title {
+.hire-us .trustedby-mob__heading-title {
   text-align: center;
   margin-bottom: 50px;
 }
-.hire-us .trustedby__image-box {
+.hire-us .trustedby-mob__image-box {
   height: 50px;
-  animation: scroll-left 20s linear infinite;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  gap: 10px;
 }
-.hire-us .trustedby__image-box img {
+.hire-us .trustedby-mob__marquee-content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  animation: scroll 15s linear infinite;
+}
+.hire-us .trustedby-mob__marquee-content img {
   height: 50px;
 }
 
@@ -1339,7 +1414,7 @@ li {
 }
 
 .experience {
-  width: 100vw;
+  width: 100%;
   height: 750px;
 }
 .experience__container {
@@ -1353,6 +1428,7 @@ li {
   padding-left: 16px;
 }
 .experience__marquee {
+  width: 100%;
   padding: 10px;
   margin-bottom: 60px;
   overflow-x: hidden;
@@ -1615,7 +1691,8 @@ li {
     width: 100px;
     height: 100px;
     position: absolute;
-    left: 200px;
+    left: 60px;
+    top: 50%;
     border: 1px solid rgb(255, 0, 0);
   }
   .navigation__hamurger-link:hover .navigation__hamurger-link__button {
@@ -1887,29 +1964,30 @@ li {
 }
 /* breakpoint 1366px */
 @media screen and (min-width: 1366px) {
-  .hire-us {
-    margin-top: 0 !important;
-  }
   .hire-us__container {
     width: 100%;
     height: 786px;
     display: flex;
     flex-direction: row;
   }
-  .hire-us .trustedby__container,
-.hire-us .trustedby__image-box {
-    display: flex;
-    flex-direction: column;
-  }
   .hire-us .projects {
     padding-top: 160px;
     flex: 0 1 70%;
   }
-  .hire-us .trustedby {
+  .hire-us .trustedby-mob {
+    display: none;
+  }
+  .hire-us .trustedby-dt {
+    display: block;
     height: inherit;
     flex: 0 1 30%;
   }
-  .hire-us .trustedby__image-box {
+  .hire-us .trustedby-dt__container, .hire-us .trustedby-dt__image-box {
+    display: flex;
+    flex-direction: column;
+    background-color: #f9fafe;
+  }
+  .hire-us .trustedby-dt__image-box {
     height: 700px;
     padding-top: 0;
     display: flex;
@@ -1917,7 +1995,7 @@ li {
     justify-content: flex-start;
     gap: 80px;
   }
-  .hire-us .trustedby__image img {
+  .hire-us .trustedby-dt__image img {
     transform: scale(1.8);
   }
 }
@@ -2144,31 +2222,21 @@ li {
   }
   .testimonials .carousel__item-box {
     padding: 100px;
-    position: relative;
+    position: absolute;
   }
   .testimonials .carousel__item-box::before, .testimonials .carousel__item-box::after {
-    display: inline-block;
-    width: 24px;
-    height: 2px;
-    background-color: #fff;
+    content: "";
+    display: block;
+    width: 100px;
+    height: 100px;
+    background-size: contain;
+    position: absolute;
   }
   .testimonials .carousel__item-box::before {
-    content: "";
-    display: block;
-    width: 100px;
-    height: 100px;
     background: url("https://www.badinsoft.com/wp-content/themes/badin-soft-theme/assets/badin-photo/testimonials/home/quote-open.svg") no-repeat center center;
-    background-size: contain;
-    position: absolute;
   }
   .testimonials .carousel__item-box::after {
-    content: "";
-    display: block;
-    width: 100px;
-    height: 100px;
     background: url("https://www.badinsoft.com/wp-content/themes/badin-soft-theme/assets/badin-photo/testimonials/home/quote-close.svg") no-repeat center center;
-    background-size: contain;
-    position: absolute;
   }
   .testimonials .carousel__item-box::before {
     top: -40px;
@@ -2179,6 +2247,12 @@ li {
   }
   .testimonials .carousel__item-box--one {
     animation: swipeTextOne 30s infinite;
+  }
+  .testimonials .carousel__item-box--two {
+    animation: swipeTextTwo 30s infinite;
+  }
+  .testimonials .carousel__item-box--three {
+    animation: swipeTextThree 30s infinite;
   }
   .testimonials .carousel__paragraph-text-italic {
     margin-bottom: 32px;
@@ -2230,10 +2304,6 @@ li {
     padding-left: 245px;
     padding-right: 245px;
   }
-  .gallery {
-    padding-left: 245px;
-    padding-right: 32px;
-  }
   .gallery .gallery-mobile {
     display: none;
   }
@@ -2242,9 +2312,10 @@ li {
   }
   .gallery__container {
     width: 100%;
+    padding-left: 245px;
+    padding-right: 32px;
     display: flex;
     flex-direction: row;
-    border: 3px solid rgb(0, 153, 255);
   }
   .gallery__grid-wrap {
     flex: 0 1 33%;
@@ -2253,7 +2324,6 @@ li {
   .gallery__grid-wrap--first, .gallery__grid-wrap--third {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
   }
   .gallery__grid-wrap--first {
     padding-right: 60px;
@@ -2263,8 +2333,35 @@ li {
     padding-left: 60px;
     gap: 100px;
   }
-  .gallery__grid-wrap img {
+  .gallery__grid-wrap .home-img {
     width: 100%;
+  }
+  .gallery__image-wrap {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  .gallery__overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+  }
+  .gallery__overlay .gallery-zoom-icon {
+    text-align: center;
+    color: #fff;
+    opacity: 0.5;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .gallery__overlay:hover {
+    opacity: 1;
+    transition: opacity 1s ease;
   }
   .gallery .appear {
     -webkit-transition: all 0.8s;
@@ -2277,6 +2374,38 @@ li {
     transform: none;
     -webkit-transition-delay: 0.3s;
     transition-delay: 0.3s;
+  }
+  .gallery .lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .gallery .lightbox-content {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 25px;
+    user-select: none;
+  }
+  .gallery .lightbox-content img {
+    max-height: 600px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+  .gallery .lightbox-content i {
+    color: white;
+    font-size: 60px;
+    cursor: pointer;
+    flex-shrink: 0;
   }
   .experience {
     height: 500px;
