--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -6,6 +6,8 @@
   }
 }
 
+// experience marquee animation
+
 @keyframes scroll-left {
   100% {
     translate: calc(-100% - $animation-parent-width);
@@ -17,6 +19,8 @@
     translate: calc(100% + $animation-parent-width);
   }
 }
+
+//hero composition animation
 
 @keyframes moveInRight {
   0% {
@@ -34,7 +38,7 @@
   }
 }
 
-//aurora
+//aurora hero animation
 @keyframes fly1 {
   0% {
     transform: rotate(0) translate(200px) rotate(0);
@@ -59,16 +63,16 @@
   }
 }
 
-//carousel
+//testimonial image carousel
 @keyframes carouselImageActive {
   0% {
-    top: 40%;
+    top: 45%;
     right: 40px;
     transform: scale(1.5);
   }
 
   15% {
-    top: 40%;
+    top: 45%;
     right: 40px;
     transform: scale(1.5);
   }
@@ -122,7 +126,7 @@
   }
 
   100% {
-    top: 40%;
+    top: 45%;
     right: 40px;
     transform: scale(1.5);
   }
@@ -141,12 +145,12 @@
   }
   20% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   35% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   40% {
@@ -210,12 +214,12 @@
   }
   40% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   55% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   60% {
@@ -278,12 +282,12 @@
   }
   60% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   75% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   80% {
@@ -346,12 +350,12 @@
   }
   80% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   95% {
     transform: scale(1.5);
-    top: 40%;
+    top: 45%;
     right: 40px;
   }
   100% {
@@ -493,6 +497,8 @@
   }
 }
 
+//testimonials swipe text content
+
 @keyframes swipeTextOne {
   0% {
     opacity: 1;
@@ -521,29 +527,60 @@
   0% {
     opacity: 0;
   }
-  13% {
-    transform: translate(0,-120px);
-  }
-  16% {
-    opacity: 0;
-  }
-  17% {
-    opacity: 1;
-  }
-  20% {
-    transform: translate(0,0);
-  }
-  
+
+  // 17% {
+  //   opacity: 1;
+  // }
+
   35% {
-    transform: translate(0,0);
-    opacity: 1;
+    transform: translate(0, -600px);
+    opacity: 0;
   }
   37% {
-    transform: translate(0,60px);
-    opacity: 0;
+    transform: translate(0, -540px);
+    opacity: 1;
   }
   100% {
     opacity: 0;
   }
 }
 
+@keyframes swipeTextThree {
+  0% {
+    opacity: 1;
+  }
+  33% {
+    transform: translate(0, -40px);
+  }
+  36% {
+    opacity: 1;
+  }
+
+  40% {
+    transform: translate(0, 0);
+  }
+  55% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+
+  57% {
+    opacity: 0;
+    transform: translate(0, 60px);
+  }
+  100% {
+    transform: translate(0, -120px);
+    opacity: 0;
+  }
+}
+
+//trustedby scroll-left animation
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(calc(-100% - $trustedby-gap));
+  }
+}
