--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,12 +7,12 @@
 }
 
 html {
-  //font-size: 100%;
+  font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
 body {
-  background-color: $color_white;  
+  background-color: $color-white;  
 }
 
 body,
@@ -33,12 +33,7 @@ a {
 }
 
 .container{
+  position: relative;
   overflow: hidden;
 }
 
-.home-img {
-  width: 100%;
-  border-radius: 12px;
-  box-shadow: rgba(17, 17, 26, 0.4) 0px 8px 24px,
-    rgba(17, 17, 26, 0.2) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
-}
