--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,9 @@
   height: 100px;
   z-index: 2;
   background-color: transparent;
-  position: relative;  
+  position: absolute;
+  top: 0;
+  left: 0;  
 
   &__container {
     width: 100%;
