--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -42,8 +42,8 @@
     url(../assets/images/hero-bg.png) no-repeat center right;
   background-size: 150%, cover;
 
-  position: absolute;
-  top: -100px;
+  position:relative;
+  top:0;
   left: 0;
 
   overflow: hidden;
@@ -237,8 +237,7 @@
 }
 
 //campanies section
-.campanies {
-  margin-top: 1000px;
+.campanies {  
   width: 100%;
 
   &__container {
