--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,6 +1,8 @@
 .navigation {
   width: 100vw;
-  height: 100px;
+  height: 100%;
+  position: relative;
+  
 
   &__button {
     width: 24px;
@@ -164,7 +166,6 @@
   &__list {
     position: relative;
     margin: -50px auto;
-
     text-align: center;
   }
 
@@ -260,34 +261,29 @@
 
     &__hamurger-link {
       display: block;
-      width: 100px;
-      height: 100px;
-      position: absolute;
+      width: 70px;
+      height: 70px;
+      position: fixed;
       left: 60px;
-      top: 50%;
-      border: 1px solid rgb(255, 0, 0);
-
-      &:hover &__button {
-        transform: scale(2);
-      }
+      top: 30%;
+      z-index: 10;
+      border: 1px solid rgb(255, 0, 0);       
+      
     }
 
     &__button {
-      height: 80px;
-      width: 30px;
-      position: fixed;
-      top: 40%;
-      left: 120px;
-      color: $color-primary;
+      height: 30px;
+      width: 30px;      
+      color: $color-primary;border: 1px solid rgb(0, 255, 213);
 
       background-color: transparent;
-      transform: translatex(-80px);
+      transform: translate(-10px, 0px);
 
       &::after {
         display: block;
         position: fixed;
-        top: 30px;
-        left: 20px;
+        top: 5px;
+        left: 30px;
         transform: rotate(-90deg);
 
         content: "MENU";
@@ -302,26 +298,23 @@
         left: 100px;
         transition: all 0.3s;
       }
-    }
 
-    &__icon,
-    &__icon::before,
-    &__icon::after {
-      background-color: $color-black-base;
-      width: 20px;
-    }
+      &__icon,
+      &__icon::before,
+      &__icon::after {
+        background-color: $color-black-base;
+        width: 20px;
+      }
 
-    &__background.open &__button {
-    }
+      &__background.open &__list {
+        position: absolute;
+        top: 0px;
+        left: 245px;
+        text-align: left;
 
-    &__background.open &__list {
-      position: absolute;
-      top: 0px;
-      left: 245px;
-      text-align: left;
-
-      a {
-        font-size: 48px;
+        a {
+          font-size: 48px;
+        }
       }
     }
   }
