--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -497,7 +497,7 @@
   }
 
   .campanies {
-    margin: 1000px 245px 0 245px;
+    margin: 0 245px 0 245px;
 
     &__container {
       width: 1350px;
@@ -739,6 +739,8 @@
       width: 100%;
       padding-left: 245px;
       padding-right: 32px;
+      position: relative;
+
       display: flex;
       flex-direction: row;
     }
@@ -762,39 +764,38 @@
         padding-left: 60px;
         gap: 100px;
       }
-
-      .home-img {
-        width: 100%;
-      }
     }
 
     &__image-wrap {
       width: 100%;
-      height: 100%;
+      height: auto;
       position: relative;
     }
 
     &__overlay {
-      background-color: rgba(0,0,0,.4);
+      background-color: rgba(0, 0, 0, 0.4);
       width: 100%;
       height: 100%;
+      border-radius: 10px;
       position: absolute;
       top: 0;
       left: 0;
-      opacity: 0;      
+      opacity: 0;
 
       .gallery-zoom-icon {
         text-align: center;
         color: $color-white;
-        opacity: .5;
+        opacity: 0.5;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        font-size: 30px;
+        cursor: pointer;
       }
 
       &:hover {
-        opacity: 1;        
+        opacity: 1;
         transition: opacity 1s ease;
       }
     }
@@ -813,44 +814,57 @@
       -webkit-transition-delay: 0.3s;
       transition-delay: 0.3s;
     }
+    .arrow-btn {
+      width: 32px;
+      height: 32px;
+      border: none;
+      border-radius: 7px;      
+      font-size: 16px;
+      font-weight: 700;
+      color: $color-blue;
+      background-color: $color-background-secondary;
+      
 
-    .lightbox {
-      position: fixed;
+      &--left {
+        position: absolute;
+        left: 25%;
+      }
+
+      &--right {
+        position: absolute;
+        right: 25%;
+      }
+    }
+
+    .picturePriview {
+      width: 100%;
+      height: 100%;
+      position: fixed;      
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
       z-index: 100;
       background-color: rgba(0, 0, 0, 0.75);
+
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    
-    .lightbox-content {
-      width: 100%; //1000px
+
+    .picturePriview-content {
+      width:100%;
       margin: 0 auto;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       padding: 0 25px;
-      user-select: none;
-    
-    
-    & img {
-      max-height: 600px;
-      //width: 90%;
-      object-fit: cover;
-      border-radius: 4px;
     }
-    
-    & i {
-      color: white;
-      font-size: 60px;
-      cursor: pointer;
-      flex-shrink: 0;
+
+    .picturePriview-image{
+      width: 30%;
+      border-radius: 20px;
     }
-   }              
   }
 
   .experience {
