--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -8,7 +8,7 @@
   display: none;
   place-items: center;
   border: 7px solid $color-black-base;
-  border-radius: 50%;  
+  border-radius: 50%;
   box-shadow: 0 0 10px rgb(0 0 0 / 20%);
   z-index: 10;
   cursor: pointer;
@@ -42,8 +42,8 @@
     url(../assets/images/hero-bg.png) no-repeat center right;
   background-size: 150%, cover;
 
-  position:relative;
-  top:0;
+  position: relative;
+  top: 0;
   left: 0;
 
   overflow: hidden;
@@ -237,7 +237,7 @@
 }
 
 //campanies section
-.campanies {  
+.campanies {
   width: 100%;
 
   &__container {
@@ -397,19 +397,22 @@
 // }
 
 //testimonials section
-.testimonials {
-  .testimonials-desktop {
-    display: none;
-  }
 
-  overflow: hidden;
+.testimonials-desktop {
+  display: none;
+}
 
+.testimonials-mob {
   &__container {
     padding: 50px $padding-lr;
   }
 
   &__title-secondary {
     margin-bottom: 24px;
+  }
+
+  .heading-subtitle {
+    margin-bottom: 32px;
   }
 
   &__paragraph-text-light {
@@ -420,13 +423,7 @@
     width: 100%;
   }
 
-  .carousel {
-    // &__item-box {
-    //   &:not(:first-child) {
-    //     display: none;
-    //   }
-    // }
-
+  .carousel-mob {
     &__list {
       position: relative;
       margin-bottom: 32px;
@@ -434,25 +431,41 @@
       display: flex;
       align-items: flex-end;
       gap: 20px;
-
-      img {
-        width: 80px;
-        height: 80px;
-      }
-
-      // .active {
-      //   width: 129.6px;
-      //   height: 129.6px;
-      // }
     }
 
-    &__heading-subtitle {
-      margin-bottom: 32px;
+    &__item {
+      min-width: 80px;
+      height: 80px;
+      cursor: pointer;
+      border: 1px solid rgb(0, 187, 255);
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &__item-content {
+      width: 100%;
+      height: 350px;
+      overflow-y: hidden;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      border: 1px solid red;
+    }
+
+    &__item-box {
+      flex: 0 1 100%;
+      height: 350px;
+      border: 1px solid rgb(26, 255, 0);
     }
 
     .buttons-box {
       position: absolute;
-      top: 0;
+      top: -50%;
       right: 5%;
 
       display: flex;
@@ -465,6 +478,7 @@
     height: 32px;
     border: none;
     background-color: transparent;
+    cursor: pointer;
   }
 }
 
