--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -51,7 +51,7 @@ $padding-lr: 16px;
 $padding-dt-lr: 245px;
 
 //experience marquee animation
-$animation-parent-width: 100%;
+$animation-parent-width: 100vw;
 
 // trustedby animation scroll-left
 $trustedby-gap: 10px;
