--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,12 @@ a {
 }
 @keyframes scroll-left {
   100% {
-    translate: -200%;
+    translate: calc(-100% + 100vw);
   }
 }
 @keyframes scroll-right {
   100% {
-    translate: 200%;
+    translate: calc(100% - 100vw);
   }
 }
 @keyframes moveInRight {
@@ -506,7 +506,7 @@ a {
     opacity: 0;
   }
   100% {
-    opacity: 1;
+    opacity: 0;
   }
 }
 @keyframes swipeTextTwo {
@@ -1303,8 +1303,18 @@ li {
 .testimonials-mob__carousel {
   width: 100%;
 }
-.testimonials-mob .carousel-mob__list {
+.testimonials-mob .carousel-mob-inner {
   position: relative;
+  border: 1px solid rgb(234, 0, 255);
+}
+.testimonials-mob .carousel-mob .buttons-box {
+  position: absolute;
+  top: -8%;
+  right: 3%;
+  display: flex;
+  justify-content: flex-end;
+}
+.testimonials-mob .carousel-mob__list {
   margin-bottom: 32px;
   display: flex;
   align-items: flex-end;
@@ -1315,6 +1325,17 @@ li {
   height: 80px;
   cursor: pointer;
   border: 1px solid rgb(0, 187, 255);
+}
+.testimonials-mob .carousel-mob__item:first-child {
+  position: relative;
+  bottom: 5px;
+}
+.testimonials-mob .carousel-mob__item.activeItem {
+  min-width: 80px;
+  margin-left: 28px;
+  margin-right: 20px;
+  scale: 1.5;
+  transform-origin: bottom;
 }
 .testimonials-mob .carousel-mob img {
   width: 100%;
@@ -1334,13 +1355,6 @@ li {
   flex: 0 1 100%;
   height: 350px;
   border: 1px solid rgb(26, 255, 0);
-}
-.testimonials-mob .carousel-mob .buttons-box {
-  position: absolute;
-  top: -50%;
-  right: 5%;
-  display: flex;
-  justify-content: flex-end;
 }
 .testimonials-mob .arrow-btn {
   width: 40px;
@@ -1455,8 +1469,10 @@ li {
 .experience {
   width: 100%;
   height: 750px;
+  position: relative;
 }
 .experience__container {
+  width: 100vw;
   padding-top: 100px;
   padding-bottom: 60px;
 }
@@ -1467,12 +1483,13 @@ li {
   padding-left: 16px;
 }
 .experience__marquee {
-  width: 100%;
   padding: 10px;
   margin-bottom: 60px;
-  overflow-x: hidden;
+  position: relative;
 }
 .experience__marquee-content {
+  position: relative;
+  position: absolute;
   white-space: nowrap;
   opacity: 0.65;
 }
