--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -424,8 +424,21 @@
   }
 
   .carousel-mob {
-    &__list {
+    &-inner {
       position: relative;
+      border: 1px solid rgb(234, 0, 255);
+    }
+
+    .buttons-box {
+      position: absolute;
+      top: -8%;
+      right: 3%;
+
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    &__list {
       margin-bottom: 32px;
 
       display: flex;
@@ -438,6 +451,19 @@
       height: 80px;
       cursor: pointer;
       border: 1px solid rgb(0, 187, 255);
+
+      &:first-child{ 
+        position: relative;       
+        bottom: 5px;
+      }
+
+      &.activeItem {
+        min-width: 80px;
+        margin-left: 28px;
+        margin-right: 20px;
+        scale: (1.5);
+        transform-origin: bottom;
+      }
     }
 
     img {
@@ -461,15 +487,6 @@
       flex: 0 1 100%;
       height: 350px;
       border: 1px solid rgb(26, 255, 0);
-    }
-
-    .buttons-box {
-      position: absolute;
-      top: -50%;
-      right: 5%;
-
-      display: flex;
-      justify-content: flex-end;
     }
   }
 
@@ -623,8 +640,10 @@
 .experience {
   width: 100%;
   height: 750px;
+  position: relative;
 
   &__container {
+    width: $animation-parent-width;
     padding-top: 100px;
     padding-bottom: 60px;
   }
@@ -638,13 +657,16 @@
   }
 
   &__marquee {
-    width: $animation-parent-width;
+    // width: $animation-parent-width;
     padding: 10px;
     margin-bottom: 60px;
-    overflow-x: hidden;
+    // overflow-x: hidden;
+    position: relative;
   }
 
   &__marquee-content {
+    position: relative;
+    position: absolute;
     white-space: nowrap;
     opacity: 0.65;
 
@@ -653,7 +675,6 @@
       display: flex;
       flex-direction: row;
       gap: 40px;
-
       animation: scroll-left 20s linear infinite alternate;
     }
 
